<resources>
    <string name="app_name">DragApplication</string>
    <string name="restart">Restart</string>
    <string name="settings">Settings</string>
    <string name="pref_show_time_key">show_time</string>
    <string name="pref_show_false">Hidden</string>
    <string name="pref_show_true">Shown</string>
    <string name="pref_show_time_label">Show Time</string>

    <string name="pref_board_element_shape_key">board_element_shape</string>
    <string name="pref_board_element_shape_label">Shape</string>

    <string name="pref_board_element_shape_circle_label">Circle</string>
    <string name="pref_board_element_shape_circle_value">circle</string>
    <string name="pref_board_element_shape_square_label">Square</string>
    <string name="pref_board_element_shape_square_value">square</string>

    <string name="pref_player_name_key">player_name</string>
    <string name="pref_player_name_label">Name</string>
</resources>
