<?xml version="1.0" encoding="utf-8"?>
<!-- COMPLETED (3) In res->xml create a file called pref_visualizer -->
<!-- COMPLETED (4) In pref_visualizer create a preference screen containing a single check box preference
    This check box preference should have a default value of true, the key 'show_bass', a
    summaryOff of Hidden, a summaryOn of Shown and a title of 'Show Bass' -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:defaultValue="@bool/pref_show_time_default"
        android:key="@string/pref_show_time_key"
        android:summaryOff="@string/pref_show_false"
        android:summaryOn="@string/pref_show_true"
        android:title="@string/pref_show_time_label" />
    <EditTextPreference
        android:defaultValue="Anonymous"
        android:key="@string/pref_player_name_key"
        android:title="@string/pref_player_name_label"
        />
    <ListPreference
        android:defaultValue="Circle"
        android:entries="@array/pref_board_element_shape_labels"
        android:entryValues="@array/pref_board_element_shape_values"
        android:key="@string/pref_board_element_shape_key"
        android:title="@string/pref_board_element_shape_label"
        />



</PreferenceScreen>
